# krm-functions

./: .gitignore  Dockerfile  Kptfile  Makefile  README.md  go.mod  go.sum  replacements.yaml  setters.yaml
.github/workflows/: common-build.yaml  jobs-build.yaml  krm-release-scripts-ci.yaml  networking-build.yaml  pgbouncer-build.yaml  workloads-build.yaml
analysis_templates/: requests_errors.yaml
cmd/iam/: iam.go
cmd/jobs/: jobs.go
cmd/networking/: main.go  networking_test.go
cmd/pgbouncer/: pgbouncer.go
cmd/pubsub/: pubsub.go
cmd/rollouts/: README.md  rollouts.go
data/: certificate.yaml  lummopages-ingress.yaml  lummopages-web.yaml
deployment1/: Kptfile  certificate.yaml  config-map.yaml  ingress-route.yaml  package-context.yaml
deployment2/: Kptfile  package-context.yaml
deployment3/: Kptfile  apply-replacements.yaml  certificate.yaml  config-map.yaml  ingress-route.yaml  package-context.yaml  service.yaml
example/: Kptfile  README.md
inject-routes/: Dockerfile  README.md  go.mod  go.sum  main.go
network-services/: Kptfile  README.md
networking/: Dockerfile  Makefile  README.md  go.mod  go.sum  injectroutes.go  injectroutes_test.go  main.go  networking.go  networking_test.go
pgbouncer/: Dockerfile  go.mod  go.sum  main.go  main_test.go  pgbouncer.go
pkg/: random_string.go
scripts/: Dockerfile  file_utils.py  git_utils.py  krm_release.py  pyproject.toml  run.sh
workloads/: Dockerfile  Makefile  README.md  go.mod  go.sum  jobs.go  main.go  rollout.yaml  rollouts.go  scaling.go  workload_test.go  workloads.go  workloads_test.go
(+78 files in other folders)
