[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Akshaya"]

[tool.poetry.dependencies]
python = "^3.10"
GitPython = "^3.1.37"
PyGithub = "^1.57"
"ruamel.yaml" = "^0.17.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
